Task2/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-app
          image: adilets/sa-assignment2-task2-frontend:v1
          ports:
            - name: web
              containerPort: 80
