Task2/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: ClusterIP
